@startuml ER Diagram
!define TABLE(x) entity x << (T,#FFAAAA) >>
!define PK(x) <u>x</u>
!define FK(x) <i>x</i>

skinparam linetype ortho

title Hệ thống Ngân hàng - ER Diagram (Đầy đủ)

' Main Entities
TABLE(Branches) {
    PK(branch_id) : INT
    branch_code : VARCHAR(20) UNIQUE
    branch_name : VARCHAR(200)
    address : VARCHAR(500)
    phone : VARCHAR(20)
    email : VARCHAR(100)
    FK(manager_id) : INT
    status : ENUM('ACTIVE', 'INACTIVE')
    created_at : TIMESTAMP
}

TABLE(Roles) {
    PK(role_id) : INT
    role_name : VARCHAR(50) UNIQUE
    description : VARCHAR(500)
    created_at : TIMESTAMP
}

TABLE(Employees) {
    PK(employee_id) : INT
    employee_code : VARCHAR(20) UNIQUE
    FK(branch_id) : INT
    FK(role_id) : INT
    full_name : VARCHAR(200)
    email : VARCHAR(100) UNIQUE
    phone : VARCHAR(20)
    username : VARCHAR(50) UNIQUE
    password_hash : VARCHAR(255)
    status : ENUM('ACTIVE', 'INACTIVE')
    created_at : TIMESTAMP
}

TABLE(Customers) {
    PK(customer_id) : INT
    customer_code : VARCHAR(20) UNIQUE
    full_name : VARCHAR(200)
    email : VARCHAR(100) UNIQUE
    phone : VARCHAR(20) UNIQUE
    id_card_number : VARCHAR(20)
    date_of_birth : DATE
    gender : ENUM('M', 'F', 'OTHER')
    address : VARCHAR(500)
    occupation : VARCHAR(100)
    monthly_income : DECIMAL(18,2)
    FK(registered_branch_id) : INT
    username : VARCHAR(50) UNIQUE
    password_hash : VARCHAR(255)
    status : ENUM('ACTIVE', 'INACTIVE')
    created_at : TIMESTAMP
}

TABLE(CreditScores) {
    PK(score_id) : INT
    FK(customer_id) : INT
    score : INT [0-1000]
    grade : ENUM('AAA','AA','A','BBB','BB','B','CCC','CC','C','D')
    calculated_at : TIMESTAMP
}

TABLE(AccountTypes) {
    PK(account_type_id) : INT
    type_code : VARCHAR(20) UNIQUE
    type_name : VARCHAR(100)
    description : VARCHAR(500)
    min_balance : DECIMAL(18,2)
    interest_rate : DECIMAL(5,2)
    status : ENUM('ACTIVE', 'INACTIVE')
}

TABLE(Accounts) {
    PK(account_id) : INT
    account_number : VARCHAR(20) UNIQUE
    FK(customer_id) : INT
    FK(account_type_id) : INT
    FK(branch_id) : INT
    balance : DECIMAL(18,2)
    interest_rate : DECIMAL(5,2)
    opened_date : DATE
    status : ENUM('ACTIVE', 'CLOSED')
    created_at : TIMESTAMP
}

TABLE(Cards) {
    PK(card_id) : INT
    card_number : VARCHAR(255) -- Encrypted
    FK(account_id) : INT
    card_type : ENUM('DEBIT', 'CREDIT')
    issue_date : DATE
    expiry_date : DATE
    status : ENUM('ACTIVE', 'LOCKED', 'EXPIRED')
    created_at : TIMESTAMP
}

TABLE(TransactionTypes) {
    PK(transaction_type_id) : INT
    type_code : VARCHAR(20) UNIQUE
    type_name : VARCHAR(100)
    description : VARCHAR(500)
}

TABLE(Transactions) {
    PK(transaction_id) : BIGINT
    transaction_code : VARCHAR(50) UNIQUE
    FK(transaction_type_id) : INT
    FK(from_account_id) : INT
    FK(to_account_id) : INT
    amount : DECIMAL(18,2)
    fee : DECIMAL(10,2)
    description : VARCHAR(500)
    balance_after : DECIMAL(18,2)
    status : ENUM('PENDING', 'SUCCESS', 'FAILED')
    transaction_date : TIMESTAMP
}

TABLE(SavingsInterestRates) {
    PK(rate_id) : INT
    term_months : INT
    min_amount : DECIMAL(18,2)
    max_amount : DECIMAL(18,2)
    interest_rate : DECIMAL(5,2)
    status : ENUM('ACTIVE', 'INACTIVE')
    effective_from : DATE
    effective_to : DATE
}

TABLE(SavingsDeposits) {
    PK(deposit_id) : INT
    deposit_number : VARCHAR(20) UNIQUE
    FK(customer_id) : INT
    FK(account_id) : INT
    FK(branch_id) : INT
    principal_amount : DECIMAL(18,2)
    FK(interest_rate_id) : INT
    interest_rate : DECIMAL(5,2)
    term_months : INT
    start_date : DATE
    maturity_date : DATE
    auto_renew : ENUM('YES', 'NO')
    total_interest_earned : DECIMAL(18,2)
    status : ENUM('ACTIVE','MATURED','CLOSED','WITHDRAWN_EARLY')
    created_at : TIMESTAMP
}

TABLE(SavingsTransactions) {
    PK(savings_transaction_id) : INT
    FK(deposit_id) : INT
    transaction_type : ENUM(...)
    amount : DECIMAL(18,2)
    interest_amount : DECIMAL(18,2)
    description : VARCHAR(500)
    transaction_date : TIMESTAMP
}

TABLE(CollateralTypes) {
    PK(collateral_type_id) : INT
    type_code : VARCHAR(20) UNIQUE
    type_name : VARCHAR(100)
    max_ltv : DECIMAL(5,2)
}

TABLE(Collaterals) {
    PK(collateral_id) : INT
    FK(customer_id) : INT
    FK(collateral_type_id) : INT
    collateral_name : VARCHAR(200)
    description : TEXT
    location : VARCHAR(500)
    certificate_number : VARCHAR(100)
    issue_date : DATE
    issue_authority : VARCHAR(200)
    original_value : DECIMAL(18,2)
    appraised_value : DECIMAL(18,2)
    FK(appraised_by) : INT
    appraised_date : DATE
    status : ENUM('PENDING','AVAILABLE','IN_USE','REJECTED')
    verification_notes : VARCHAR(1000)
    created_at : TIMESTAMP
}

TABLE(LoanTypes) {
    PK(loan_type_id) : INT
    type_code : VARCHAR(20) UNIQUE
    type_name : VARCHAR(100)
    description : VARCHAR(500)
    max_amount : DECIMAL(18,2)
    max_term_months : INT
    require_collateral : ENUM('YES', 'NO')
}

TABLE(LoanInterestRates) {
    PK(rate_id) : INT
    FK(loan_type_id) : INT
    min_amount : DECIMAL(18,2)
    max_amount : DECIMAL(18,2)
    term_months_from : INT
    term_months_to : INT
    credit_grade : ENUM('AAA','AA','A','BBB','BB','B','CCC','CC','C')
    base_rate : DECIMAL(5,2)
    effective_from : DATE
    effective_to : DATE
    status : ENUM('ACTIVE', 'INACTIVE')
}

TABLE(Loans) {
    PK(loan_id) : INT
    loan_number : VARCHAR(20) UNIQUE
    FK(customer_id) : INT
    FK(account_id) : INT
    FK(loan_type_id) : INT
    FK(branch_id) : INT
    FK(loan_officer_id) : INT
    loan_amount : DECIMAL(18,2)
    approved_amount : DECIMAL(18,2)
    FK(interest_rate_id) : INT
    interest_rate : DECIMAL(5,2)
    term_months : INT
    monthly_payment : DECIMAL(18,2)
    purpose : VARCHAR(500)
    FK(collateral_id) : INT
    collateral_value : DECIMAL(18,2)
    ltv_ratio : DECIMAL(5,2)
    outstanding_balance : DECIMAL(18,2)
    application_date : DATE
    approved_date : DATE
    FK(approved_by) : INT
    rejection_reason : VARCHAR(500)
    disbursement_date : DATE
    first_payment_date : DATE
    maturity_date : DATE
    status : ENUM('PENDING','APPROVED','REJECTED','ACTIVE','PAID_OFF','OVERDUE')
    created_at : TIMESTAMP
}

TABLE(LoanPaymentSchedule) {
    PK(schedule_id) : INT
    FK(loan_id) : INT
    payment_number : INT
    due_date : DATE
    principal_amount : DECIMAL(18,2)
    interest_amount : DECIMAL(18,2)
    total_payment : DECIMAL(18,2)
    outstanding_balance : DECIMAL(18,2)
    status : ENUM('PENDING','PAID','OVERDUE','PARTIAL_PAID')
    paid_amount : DECIMAL(18,2)
    paid_date : DATE
}

TABLE(LoanPayments) {
    PK(payment_id) : INT
    FK(loan_id) : INT
    FK(schedule_id) : INT
    FK(transaction_id) : BIGINT
    payment_date : TIMESTAMP
    principal_paid : DECIMAL(18,2)
    interest_paid : DECIMAL(18,2)
    late_fee_paid : DECIMAL(10,2)
    total_paid : DECIMAL(18,2)
    payment_method : ENUM('AUTO_DEBIT','CASH','TRANSFER','ONLINE')
    reference_number : VARCHAR(100)
    notes : VARCHAR(500)
}

' Relationships
Branches ||--o{ Employees : "manages"
Branches ||--o{ Customers : "registered_at"
Branches ||--o{ Accounts : "opened_at"
Branches ||--o{ SavingsDeposits : "at"
Branches ||--o{ Loans : "at"

Roles ||--o{ Employees : "has"

Employees ||--o{ Loans : "processes"
Employees ||--o{ Collaterals : "appraises"

Customers ||--o{ Accounts : "owns"
Customers ||--o{ SavingsDeposits : "has"
Customers ||--o{ Loans : "borrows"
Customers ||--o{ Collaterals : "owns"
Customers ||--o{ CreditScores : "has"

AccountTypes ||--o{ Accounts : "type_of"

Accounts ||--o{ Transactions : "from/to"
Accounts ||--o{ Cards : "has"
Accounts ||--o{ SavingsDeposits : "linked"
Accounts ||--o{ Loans : "disbursed_to"

TransactionTypes ||--o{ Transactions : "type_of"

SavingsInterestRates ||--o{ SavingsDeposits : "rate"
SavingsDeposits ||--o{ SavingsTransactions : "has"

CollateralTypes ||--o{ Collaterals : "type_of"
Collaterals ||--o| Loans : "secures"

LoanTypes ||--o{ Loans : "type_of"
LoanInterestRates ||--o{ Loans : "rate"

Loans ||--o{ LoanPaymentSchedule : "schedule"
Loans ||--o{ LoanPayments : "payments"

LoanPaymentSchedule ||--o{ LoanPayments : "paid"
Transactions ||--o{ LoanPayments : "via"

@enduml
